lab_hypothesis_testing

--- a/module-2/lab-hypothesis-testing/your-code/main.ipynb
+++ b/module-2/lab-hypothesis-testing/your-code/main.ipynb
@@ -644,7 +644,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zvalue, pvalue = proportions_ztest(salaries['Salary or Hourly'].value_counts()[1], len(salaries), 0.25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -653,14 +662,21 @@
        "(-3.5099964213703005, 0.0004481127249057967)"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "proportions_ztest(salaries['Salary or Hourly'].value_counts()[1], len(salaries), 0.25)"
+    "zvalue, pvalue"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
