--- a/module-2/lab-hypothesis-testing/your-code/bonus.ipynb
+++ b/module-2/lab-hypothesis-testing/your-code/bonus.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,9 +39,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Type 1</th>\n",
+       "      <th>Type 2</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Sp. Atk</th>\n",
+       "      <th>Sp. Def</th>\n",
+       "      <th>Speed</th>\n",
+       "      <th>Generation</th>\n",
+       "      <th>Legendary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Bulbasaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>318</td>\n",
+       "      <td>45</td>\n",
+       "      <td>49</td>\n",
+       "      <td>49</td>\n",
+       "      <td>65</td>\n",
+       "      <td>65</td>\n",
+       "      <td>45</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Ivysaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>405</td>\n",
+       "      <td>60</td>\n",
+       "      <td>62</td>\n",
+       "      <td>63</td>\n",
+       "      <td>80</td>\n",
+       "      <td>80</td>\n",
+       "      <td>60</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Venusaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>525</td>\n",
+       "      <td>80</td>\n",
+       "      <td>82</td>\n",
+       "      <td>83</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>VenusaurMega Venusaur</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>625</td>\n",
+       "      <td>80</td>\n",
+       "      <td>100</td>\n",
+       "      <td>123</td>\n",
+       "      <td>122</td>\n",
+       "      <td>120</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Charmander</td>\n",
+       "      <td>Fire</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>309</td>\n",
+       "      <td>39</td>\n",
+       "      <td>52</td>\n",
+       "      <td>43</td>\n",
+       "      <td>60</td>\n",
+       "      <td>50</td>\n",
+       "      <td>65</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   #                   Name Type 1  Type 2  Total  HP  Attack  Defense  \\\n",
+       "0  1              Bulbasaur  Grass  Poison    318  45      49       49   \n",
+       "1  2                Ivysaur  Grass  Poison    405  60      62       63   \n",
+       "2  3               Venusaur  Grass  Poison    525  80      82       83   \n",
+       "3  3  VenusaurMega Venusaur  Grass  Poison    625  80     100      123   \n",
+       "4  4             Charmander   Fire     NaN    309  39      52       43   \n",
+       "\n",
+       "   Sp. Atk  Sp. Def  Speed  Generation  Legendary  \n",
+       "0       65       65     45           1      False  \n",
+       "1       80       80     60           1      False  \n",
+       "2      100      100     80           1      False  \n",
+       "3      122      120     80           1      False  \n",
+       "4       60       50     65           1      False  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Import dataset\n",
     "\n",
@@ -63,10 +205,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from scipy.stats import ttest_ind, ttest_rel\n",
+    "\n",
     "def t_test_features(s1, s2, features=['HP', 'Attack', 'Defense', 'Sp. Atk', 'Sp. Def', 'Speed', 'Total']):\n",
     "    \"\"\"Test means of a feature set of two samples\n",
     "    \n",
@@ -79,10 +223,13 @@
     "        dict: a dictionary of t-test scores for each feature where the feature name is the key and the p-value is the value\n",
     "    \"\"\"\n",
     "    results = {}\n",
-    "\n",
-    "    # Your code here\n",
+    "     \n",
+    "    for f in features:\n",
+    "        results[f]= ttest_ind(s1[f],s2[f]).pvalue\n",
     "    \n",
-    "    return results"
+    "    return results\n",
+    "\n",
+    "# He metido el sample, pero no sé si deberíamos meter los datos normalizados"
    ]
   },
   {
@@ -106,11 +253,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'HP': 3.330647684846191e-15,\n",
+       " 'Attack': 7.827253003205333e-24,\n",
+       " 'Defense': 1.5842226094427255e-12,\n",
+       " 'Sp. Atk': 6.314915770427266e-41,\n",
+       " 'Sp. Def': 1.8439809580409333e-26,\n",
+       " 'Speed': 2.3540754436897763e-21,\n",
+       " 'Total': 3.0952457469652825e-52}"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "t_test_features(pokemon[pokemon[\"Legendary\"]==False],pokemon[pokemon[\"Legendary\"]==True])"
    ]
   },
   {
@@ -126,7 +292,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your comment here"
+    "# Los pvalue están muy por debajo de 0.05, por lo que las medias de los stats de ambas muestras difieren mucho"
    ]
   },
   {
@@ -138,11 +304,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'HP': 0.13791881412813622,\n",
+       " 'Attack': 0.24050968418101457,\n",
+       " 'Defense': 0.5407630349194362,\n",
+       " 'Sp. Atk': 0.141197881763315,\n",
+       " 'Sp. Def': 0.16781226231606386,\n",
+       " 'Speed': 0.0028356954812578704,\n",
+       " 'Total': 0.559914064901444}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "t_test_features(pokemon[pokemon[\"Generation\"]==1],pokemon[pokemon[\"Generation\"]==2])"
    ]
   },
   {
@@ -158,7 +343,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your comment here"
+    "# Los pvalue están por encima del 0.05 (a excepción de la velocidad), por lo tanto la media de todos los stats\n",
+    "# son muy parecidos. Seguramente una de las generaciones, tengan de media pokémon más rápidos"
    ]
   },
   {
@@ -170,11 +356,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'HP': 0.11060643144431853,\n",
+       " 'Attack': 0.00015741395666164396,\n",
+       " 'Defense': 3.250594205757004e-08,\n",
+       " 'Sp. Atk': 0.0001454917404035147,\n",
+       " 'Sp. Def': 0.00010893304795534396,\n",
+       " 'Speed': 0.024051410794037463,\n",
+       " 'Total': 1.1749035008828668e-07}"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "t_test_features(pokemon[pokemon[\"Type 2\"].isnull() == True],pokemon[pokemon[\"Type 2\"].isnull() == False])"
    ]
   },
   {
@@ -190,7 +395,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your comment here"
+    "# De manera general, ambos grupos de pokémon tienen de media los mismos stats de media (por la columna Total)\n",
+    "# Sin embargo, al analizar de manera individual cada stat, algunos tienen medias diferentes, como la salud o la\n",
+    "# velocidad"
    ]
   },
   {
@@ -204,11 +411,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Attack vs Defense 1.7140303479358558e-05\n",
+      "Sp. Atk vs Sp. Def 0.3933685997548122\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "def t_test_stats(s1, s2):\n",
+    "\n",
+    "    return ttest_rel(s1,s2).pvalue\n",
+    "\n",
+    "att_vs_def = t_test_stats(pokemon[\"Attack\"],pokemon[\"Defense\"])\n",
+    "sp_att_vs_sp_def = t_test_stats(pokemon[\"Sp. Atk\"],pokemon[\"Sp. Def\"])\n",
+    "\n",
+    "print(f\"Attack vs Defense {att_vs_def}\\nSp. Atk vs Sp. Def {sp_att_vs_sp_def}\")"
    ]
   },
   {
@@ -224,7 +449,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your comment here"
+    "# Si comparamos Ataque y Defensa, pvalue es mucho menor que 0.05, por lo que se rechaza la hipótesis inicial (las\n",
+    "# media de ambos stats son semejantes). Sin embargo, no se puede afirmar lo mismo de las medias de los ataques\n",
+    "# y defensas especiales"
    ]
   }
  ],
