lab 1 menos bonus terminado

--- a/module-2/lab-hypothesis-testing/your-code/main.ipynb
+++ b/module-2/lab-hypothesis-testing/your-code/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
        "4            NaN        19.86  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,12 +223,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Salary    25161\n",
+       "Hourly     8022\n",
+       "Name: Salary or Hourly, dtype: int64"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "salaries['Salary or Hourly'].value_counts()"
    ]
   },
   {
@@ -247,11 +261,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Department</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>ADMIN HEARNG</th>\n",
+       "      <td>39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ANIMAL CONTRL</th>\n",
+       "      <td>81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AVIATION</th>\n",
+       "      <td>1629</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BOARD OF ELECTION</th>\n",
+       "      <td>107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BOARD OF ETHICS</th>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   Name\n",
+       "Department             \n",
+       "ADMIN HEARNG         39\n",
+       "ANIMAL CONTRL        81\n",
+       "AVIATION           1629\n",
+       "BOARD OF ELECTION   107\n",
+       "BOARD OF ETHICS       8"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "salaries.groupby(['Department']).count()[['Name']].head()"
    ]
   },
   {
@@ -265,11 +348,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "from scipy.stats import ttest_1samp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_1sampResult(statistic=20.6198057854942, pvalue=4.3230240486229894e-92)"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ttest_1samp(salaries['Hourly Rate'].dropna(axis=0),30)\n",
+    "\n",
+    "#The hyphotesis is rejected"
    ]
   },
   {
@@ -283,11 +389,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_1sampResult(statistic=5.932870515690814, pvalue=3.015758519916386e-09)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "ttest_1samp(salaries['Annual Salary'].dropna(axis=0), 86000)\n",
+    "\n",
+    "#The hyphotesis is rejected"
    ]
   },
   {
@@ -299,11 +420,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "hourly_department = pd.crosstab(salaries['Department'].dropna(), salaries['Salary or Hourly']).sort_values(by='Hourly', ascending=False)\n",
+    "hourly_department.head()\n",
+    "                                                                                                        "
    ]
   },
   {
@@ -315,11 +440,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Job Titles</th>\n",
+       "      <th>Department</th>\n",
+       "      <th>Full or Part-Time</th>\n",
+       "      <th>Salary or Hourly</th>\n",
+       "      <th>Typical Hours</th>\n",
+       "      <th>Annual Salary</th>\n",
+       "      <th>Hourly Rate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>ABBATE,  JOSEPH L</td>\n",
+       "      <td>POOL MOTOR TRUCK DRIVER</td>\n",
+       "      <td>STREETS &amp; SAN</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Hourly</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>35.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>ABDUL-SHAKUR,  TAHIR</td>\n",
+       "      <td>GENERAL LABORER - DSS</td>\n",
+       "      <td>STREETS &amp; SAN</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Hourly</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>21.43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>ABERCROMBIE,  TIMOTHY</td>\n",
+       "      <td>MOTOR TRUCK DRIVER</td>\n",
+       "      <td>STREETS &amp; SAN</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Hourly</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>35.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>ABRAMS,  DANIELLE T</td>\n",
+       "      <td>SANITATION LABORER</td>\n",
+       "      <td>STREETS &amp; SAN</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Hourly</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>36.21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>ABRAMS,  SAMUEL A</td>\n",
+       "      <td>POOL MOTOR TRUCK DRIVER</td>\n",
+       "      <td>STREETS &amp; SAN</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Hourly</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>35.60</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      Name               Job Titles     Department  \\\n",
+       "7       ABBATE,  JOSEPH L   POOL MOTOR TRUCK DRIVER  STREETS & SAN   \n",
+       "21   ABDUL-SHAKUR,  TAHIR     GENERAL LABORER - DSS  STREETS & SAN   \n",
+       "24  ABERCROMBIE,  TIMOTHY        MOTOR TRUCK DRIVER  STREETS & SAN   \n",
+       "36     ABRAMS,  DANIELLE T       SANITATION LABORER  STREETS & SAN   \n",
+       "39       ABRAMS,  SAMUEL A  POOL MOTOR TRUCK DRIVER  STREETS & SAN   \n",
+       "\n",
+       "   Full or Part-Time Salary or Hourly  Typical Hours  Annual Salary  \\\n",
+       "7                  F           Hourly           40.0            NaN   \n",
+       "21                 F           Hourly           40.0            NaN   \n",
+       "24                 F           Hourly           40.0            NaN   \n",
+       "36                 F           Hourly           40.0            NaN   \n",
+       "39                 F           Hourly           40.0            NaN   \n",
+       "\n",
+       "    Hourly Rate  \n",
+       "7         35.60  \n",
+       "21        21.43  \n",
+       "24        35.60  \n",
+       "36        36.21  \n",
+       "39        35.60  "
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "data_salaries = salaries.loc[(salaries['Department']=='STREETS & SAN')]\n",
+    "\n",
+    "data_salaries.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_1sampResult(statistic=-9.567447887848152, pvalue=3.3378530564707717e-21)"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Your code here:\n",
+    "\n",
+    "ttest_1samp(data_salaries['Hourly Rate'].dropna(), 35)\n",
+    "\n",
+    "#The hyphotesis is not rejected. Workers from the department with the most \n",
+    "#hourly workers receibe less than $35/hour"
    ]
   },
   {
@@ -343,11 +614,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(32.52345834488529, 33.05365708767727)"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "from scipy.stats import t, sem\n",
+    "from scipy import mean\n",
+    "\n",
+    "confidence = 0.95\n",
+    "n = len(salaries['Hourly Rate'].dropna())\n",
+    "m = mean(salaries['Hourly Rate'].dropna())\n",
+    "standard_error = sem(salaries['Hourly Rate'].dropna())\n",
+    "t.interval(0.95, n-1, loc=m, scale=standard_error)"
    ]
   },
   {
@@ -359,11 +649,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 89,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9.31381234362183, 9.45418765637817)"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "data_police = salaries.loc[(salaries['Department']=='POLICE')]\n",
+    "\n",
+    "confidence = 0.95\n",
+    "n = len(data_police['Hourly Rate'].dropna())\n",
+    "m = mean(data_police['Hourly Rate'].dropna())\n",
+    "standard_error = sem(data_police['Hourly Rate'].dropna())\n",
+    "t.interval(0.95, n-1, loc=m, scale=standard_error)"
    ]
   },
   {
@@ -381,11 +690,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "from statsmodels.stats.proportion import proportions_ztest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-3.5099964213703005 0.0004481127249057967\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = len(salaries[salaries['Salary or Hourly']=='Hourly'])\n",
+    "nobs  = len(salaries['Salary or Hourly'].dropna())\n",
+    "value = 0.25\n",
+    "stat, pval = proportions_ztest(count, nobs, value)\n",
+    "\n",
+    "print(stat, pval)"
    ]
   }
  ],
