--- a/module-2/lab-probability-distribution/your_code/main.ipynb
+++ b/module-2/lab-probability-distribution/your_code/main.ipynb
@@ -12,11 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import your libraries\n"
+    "# Import your libraries\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from scipy import stats"
    ]
   },
   {
@@ -40,29 +43,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python3.7/site-packages/scipy/stats/stats.py:1394: UserWarning: kurtosistest only valid for n>=20 ... continuing anyway, n=10\n",
+      "/anaconda3/lib/python3.7/site-packages/scipy/stats/stats.py:1416: UserWarning: kurtosistest only valid for n>=20 ... continuing anyway, n=10\n",
       "  \"anyway, n=%i\" % int(n))\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0    (0.23349439272475625, 0.8898101119651654)\n",
-       "1     (1.0356615846904733, 0.5958115862525835)\n",
-       "2     (1.8172735178882062, 0.4030733357826316)\n",
-       "3    (5.6079568200949685, 0.06056861586664984)\n",
-       "4      (2.993150960224296, 0.2238955836754518)\n",
+       "0    (7.9324668195462635, 0.018944655672798905)\n",
+       "1      (2.785347956896783, 0.24841017230612533)\n",
+       "2     (0.12655248071419922, 0.9386841354301608)\n",
+       "3      (0.6289035236439656, 0.7301890820864017)\n",
+       "4      (4.415835815416615, 0.10992929333738985)\n",
        "dtype: object"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
