empezando el bonus

--- a/module-2/lab-hypothesis-testing/your-code/bonus.ipynb
+++ b/module-2/lab-hypothesis-testing/your-code/bonus.ipynb
@@ -19,13 +19,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import libraries\n",
     "\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
