--- a/module-2/lab-hypothesis-testing/your-code/main.ipynb
+++ b/module-2/lab-hypothesis-testing/your-code/main.ipynb
@@ -16,7 +16,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import numpy and pandas\n"
+    "# import numpy and pandas\n",
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -30,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,11 +50,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Job Titles</th>\n",
+       "      <th>Department</th>\n",
+       "      <th>Full or Part-Time</th>\n",
+       "      <th>Salary or Hourly</th>\n",
+       "      <th>Typical Hours</th>\n",
+       "      <th>Annual Salary</th>\n",
+       "      <th>Hourly Rate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AARON,  JEFFERY M</td>\n",
+       "      <td>SERGEANT</td>\n",
+       "      <td>POLICE</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>101442.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AARON,  KARINA</td>\n",
+       "      <td>POLICE OFFICER (ASSIGNED AS DETECTIVE)</td>\n",
+       "      <td>POLICE</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>94122.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AARON,  KIMBERLEI R</td>\n",
+       "      <td>CHIEF CONTRACT EXPEDITER</td>\n",
+       "      <td>GENERAL SERVICES</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>101592.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ABAD JR,  VICENTE M</td>\n",
+       "      <td>CIVIL ENGINEER IV</td>\n",
+       "      <td>WATER MGMNT</td>\n",
+       "      <td>F</td>\n",
+       "      <td>Salary</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>110064.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ABASCAL,  REECE E</td>\n",
+       "      <td>TRAFFIC CONTROL AIDE-HOURLY</td>\n",
+       "      <td>OEMC</td>\n",
+       "      <td>P</td>\n",
+       "      <td>Hourly</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>19.86</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Name                              Job Titles  \\\n",
+       "0    AARON,  JEFFERY M                                SERGEANT   \n",
+       "1      AARON,  KARINA   POLICE OFFICER (ASSIGNED AS DETECTIVE)   \n",
+       "2  AARON,  KIMBERLEI R                CHIEF CONTRACT EXPEDITER   \n",
+       "3  ABAD JR,  VICENTE M                       CIVIL ENGINEER IV   \n",
+       "4    ABASCAL,  REECE E             TRAFFIC CONTROL AIDE-HOURLY   \n",
+       "\n",
+       "         Department Full or Part-Time Salary or Hourly  Typical Hours  \\\n",
+       "0            POLICE                 F           Salary            NaN   \n",
+       "1            POLICE                 F           Salary            NaN   \n",
+       "2  GENERAL SERVICES                 F           Salary            NaN   \n",
+       "3       WATER MGMNT                 F           Salary            NaN   \n",
+       "4              OEMC                 P           Hourly           20.0   \n",
+       "\n",
+       "   Annual Salary  Hourly Rate  \n",
+       "0       101442.0          NaN  \n",
+       "1        94122.0          NaN  \n",
+       "2       101592.0          NaN  \n",
+       "3       110064.0          NaN  \n",
+       "4            NaN        19.86  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "salaries.head()"
    ]
   },
   {
@@ -64,11 +186,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Name                     0\n",
+       "Job Titles               0\n",
+       "Department               0\n",
+       "Full or Part-Time        0\n",
+       "Salary or Hourly         0\n",
+       "Typical Hours        25161\n",
+       "Annual Salary         8022\n",
+       "Hourly Rate          25161\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "salaries.isnull().sum(axis = 0)"
    ]
   },
   {
@@ -80,12 +222,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Salary    25161\n",
+       "Hourly     8022\n",
+       "Name: Salary or Hourly, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "\n",
+    "salaries['Salary or Hourly'].value_counts()"
    ]
   },
   {
@@ -104,11 +260,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "POLICE                   13414\n",
+       "FIRE                      4641\n",
+       "STREETS & SAN             2198\n",
+       "OEMC                      2102\n",
+       "WATER MGMNT               1879\n",
+       "AVIATION                  1629\n",
+       "TRANSPORTN                1140\n",
+       "PUBLIC LIBRARY            1015\n",
+       "GENERAL SERVICES           980\n",
+       "FAMILY & SUPPORT           615\n",
+       "FINANCE                    560\n",
+       "HEALTH                     488\n",
+       "CITY COUNCIL               411\n",
+       "LAW                        407\n",
+       "BUILDINGS                  269\n",
+       "COMMUNITY DEVELOPMENT      207\n",
+       "BUSINESS AFFAIRS           171\n",
+       "COPA                       116\n",
+       "BOARD OF ELECTION          107\n",
+       "DoIT                        99\n",
+       "PROCUREMENT                 92\n",
+       "INSPECTOR GEN               87\n",
+       "MAYOR'S OFFICE              85\n",
+       "CITY CLERK                  84\n",
+       "ANIMAL CONTRL               81\n",
+       "HUMAN RESOURCES             79\n",
+       "CULTURAL AFFAIRS            65\n",
+       "BUDGET & MGMT               46\n",
+       "ADMIN HEARNG                39\n",
+       "DISABILITIES                28\n",
+       "TREASURER                   22\n",
+       "HUMAN RELATIONS             16\n",
+       "BOARD OF ETHICS              8\n",
+       "POLICE BOARD                 2\n",
+       "LICENSE APPL COMM            1\n",
+       "Name: Department, dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "salaries['Department'].value_counts()"
    ]
   },
   {
@@ -122,11 +325,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "from scipy.stats import t\n",
+    "from scipy.stats import norm\n",
+    "from scipy.stats import ttest_1samp\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_1sampResult(statistic=20.6198057854942, pvalue=4.3230240486229894e-92)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hourly_wage = 30\n",
+    "hourly_salaries = salaries.loc[salaries['Salary or Hourly'] == 'Hourly']\n",
+    "ttest_1samp(hourly_salaries['Hourly Rate'], hourly_wage)\n",
+    "\n",
+    "# As result is less than 5% we can accept it"
    ]
   },
   {
@@ -140,11 +370,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_1sampResult(statistic=3.081997005712994, pvalue=0.0020603403550965137)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "salaried_salaries = salaries.loc[salaries['Salary or Hourly'] == 'Salary']\n",
+    "police_salaried_salaries = salaried_salaries.loc[salaried_salaries['Department'] == 'POLICE']\n",
+    "\n",
+    "av_anual_salary = 86000\n",
+    "ttest_1samp(police_salaried_salaries['Annual Salary'], av_anual_salary)\n",
+    "\n",
+    "\n",
+    "# As result is less than 5% we can accept it"
    ]
   },
   {
@@ -156,11 +405,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Salary or Hourly</th>\n",
+       "      <th>Hourly</th>\n",
+       "      <th>All</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Department</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>All</th>\n",
+       "      <td>8022</td>\n",
+       "      <td>8022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>STREETS &amp; SAN</th>\n",
+       "      <td>1862</td>\n",
+       "      <td>1862</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>WATER MGMNT</th>\n",
+       "      <td>1513</td>\n",
+       "      <td>1513</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>OEMC</th>\n",
+       "      <td>1273</td>\n",
+       "      <td>1273</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AVIATION</th>\n",
+       "      <td>1082</td>\n",
+       "      <td>1082</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GENERAL SERVICES</th>\n",
+       "      <td>765</td>\n",
+       "      <td>765</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TRANSPORTN</th>\n",
+       "      <td>725</td>\n",
+       "      <td>725</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PUBLIC LIBRARY</th>\n",
+       "      <td>299</td>\n",
+       "      <td>299</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FAMILY &amp; SUPPORT</th>\n",
+       "      <td>287</td>\n",
+       "      <td>287</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CITY COUNCIL</th>\n",
+       "      <td>64</td>\n",
+       "      <td>64</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Salary or Hourly  Hourly   All\n",
+       "Department                    \n",
+       "All                 8022  8022\n",
+       "STREETS & SAN       1862  1862\n",
+       "WATER MGMNT         1513  1513\n",
+       "OEMC                1273  1273\n",
+       "AVIATION            1082  1082\n",
+       "GENERAL SERVICES     765   765\n",
+       "TRANSPORTN           725   725\n",
+       "PUBLIC LIBRARY       299   299\n",
+       "FAMILY & SUPPORT     287   287\n",
+       "CITY COUNCIL          64    64"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "pd.crosstab(hourly_salaries['Department'], hourly_salaries['Salary or Hourly'], margins=True).sort_values('All', ascending=False).head(10)"
    ]
   },
   {
@@ -172,11 +527,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_1sampResult(statistic=-9.567447887848152, pvalue=3.3378530564707717e-21)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "dpt_hourly_salaries = hourly_salaries.loc[hourly_salaries['Department'] == 'STREETS & SAN']\n",
+    "dpt_hourly_wage = 35.0\n",
+    "\n",
+    "ttest_1samp(dpt_hourly_salaries['Hourly Rate'], dpt_hourly_wage)\n",
+    "\n",
+    "# The average salary is a bit less but acceptable since it is less than 5%"
    ]
   },
   {
@@ -200,11 +572,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(32.52349138936819, 33.053624043192286)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "from scipy.stats import sem\n",
+    "\n",
+    "confidence = 0.95\n",
+    "loc_param = hourly_salaries['Hourly Rate'].mean()\n",
+    "st_error = sem(salaries['Hourly Rate'], ddof=-1, nan_policy= 'omit')\n",
+    "degrees_freedom = (len(hourly_salaries['Hourly Rate'])-1)\n",
+    "\n",
+    "\n",
+    "conf_interval = t.interval(confidence, degrees_freedom, loc=loc_param, scale=st_error)\n",
+    "print(conf_interval)"
    ]
   },
   {
@@ -216,11 +606,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(86177.07939399949, 86795.74961226729)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "conf_pol = 0.95\n",
+    "loc_param_pol = police_salaried_salaries['Annual Salary'].mean()\n",
+    "st_error_pol = sem(police_salaried_salaries['Annual Salary'], ddof=-1, nan_policy= 'omit')\n",
+    "degrees_freedom_pol = (len(police_salaried_salaries['Annual Salary'])-1)\n",
+    "\n",
+    "pol_conf_interval = t.interval(conf_pol, degrees_freedom_pol, loc=loc_param_pol, scale=st_error_pol)\n",
+    "print(pol_conf_interval)"
    ]
   },
   {
@@ -238,12 +643,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-3.5099964213703005 - 0.0004481127249057967\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here:\n",
+    "\n",
+    "from statsmodels.stats.proportion import proportions_ztest\n",
+    "\n",
+    "\n",
+    "count = len(salaries[salaries['Salary or Hourly']=='Hourly'])\n",
+    "nobs = len(salaries['Salary or Hourly'])\n",
+    "value = 0.25\n",
+    "stat, pval = proportions_ztest(count, nobs, value)\n",
+    "print(stat, '-',pval)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here:\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -262,7 +694,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
