--- a/module-2/lab-hypothesis-testing/your-code/main.ipynb
+++ b/module-2/lab-hypothesis-testing/your-code/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
        "4            NaN        19.86  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
        "Name: Salary or Hourly, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
        "Name: Department, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,121 +326,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Typical Hours</th>\n",
-       "      <th>Annual Salary</th>\n",
-       "      <th>Hourly Rate</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>8022.000000</td>\n",
-       "      <td>25161.000000</td>\n",
-       "      <td>8022.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>34.507604</td>\n",
-       "      <td>86786.999790</td>\n",
-       "      <td>32.788558</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>9.252077</td>\n",
-       "      <td>21041.354602</td>\n",
-       "      <td>12.112573</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>10.000000</td>\n",
-       "      <td>7200.000000</td>\n",
-       "      <td>2.650000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>20.000000</td>\n",
-       "      <td>76266.000000</td>\n",
-       "      <td>21.200000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>40.000000</td>\n",
-       "      <td>90024.000000</td>\n",
-       "      <td>35.600000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>40.000000</td>\n",
-       "      <td>96060.000000</td>\n",
-       "      <td>40.200000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>40.000000</td>\n",
-       "      <td>300000.000000</td>\n",
-       "      <td>109.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Typical Hours  Annual Salary  Hourly Rate\n",
-       "count    8022.000000   25161.000000  8022.000000\n",
-       "mean       34.507604   86786.999790    32.788558\n",
-       "std         9.252077   21041.354602    12.112573\n",
-       "min        10.000000    7200.000000     2.650000\n",
-       "25%        20.000000   76266.000000    21.200000\n",
-       "50%        40.000000   90024.000000    35.600000\n",
-       "75%        40.000000   96060.000000    40.200000\n",
-       "max        40.000000  300000.000000   109.000000"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "salaries.describe()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Ttest_1sampResult(statistic=20.90583579963656, pvalue=1.522330801404414e-94)"
+       "Ttest_1sampResult(statistic=20.619805785494147, pvalue=4.323024048614701e-92)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,8 +343,8 @@
    "source": [
     "# Your code here:\n",
     "from scipy.stats import ttest_1samp\n",
-    "hourly = np.random.normal(salaries['Hourly Rate'].mean(),salaries['Hourly Rate'].std() , 8022)\n",
-    "ttest_1samp(hourly, 30)"
+    "hourly=salaries['Hourly Rate']\n",
+    "ttest_1samp(hourly, 30, nan_policy='omit')"
    ]
   },
   {
@@ -467,20 +362,19 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Ttest_1sampResult(statistic=5.616634519123018, pvalue=1.9676771872252815e-08)"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.932870515690814 1.507879259964708e-09\n"
+     ]
     }
    ],
    "source": [
     "# Your code here:\n",
-    "yearly = np.random.normal(salaries['Annual Salary'].mean(),salaries['Annual Salary'].std() , 25161)\n",
-    "ttest_1samp(yearly, 86000)"
+    "yearly = salaries['Annual Salary']\n",
+    "stats, pvalue = ttest_1samp(yearly, 86000, nan_policy='omit')\n",
+    "print(stats, pvalue/2)\n",
+    "# Reject the null as below 0.05\n"
    ]
   },
   {
@@ -585,14 +479,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_1sampResult(statistic=-9.567447887848152, pvalue=3.3378530564710738e-21)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
-    "streets = np.random.normal(salaries.loc[salaries['Department'] =='STREETS & SAN'.mean(),salaries['Hourly Rate'].std() , 1862)\n",
-    "ttest_1samp(streets, 35)\n",
-    "                                        salaries.loc[salaries['Department'] =='STREETS & SAN', 'Hourly Rate']"
+    "streets = (salaries[salaries['Department'] =='STREETS & SAN']['Hourly Rate'])\n",
+    "ttest_1samp(streets, 35,nan_policy='omit')"
    ]
   },
   {
@@ -616,11 +520,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(32.780077183391256, 32.79703824916922)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "from scipy.stats import t\n",
+    "df = len(salaries['Hourly Rate'].dropna())-1\n",
+    "mean = salaries['Hourly Rate'].dropna().mean()\n",
+    "std = salaries['Hourly Rate'].dropna().sem()\n",
+    "t.interval(0.05, df, loc=mean, scale=std)\n",
+    "\n"
    ]
   },
   {
@@ -632,11 +553,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(86476.5176546444, 86496.31135162238)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "#df = degrees freedom\n",
+    "police=salaries[salaries['Department'] =='POLICE']['Annual Salary']\n",
+    "df = len(police.dropna())-1\n",
+    "mean = police.dropna().mean()\n",
+    "std = police.dropna().sem()\n",
+    "t.interval(0.05, df, loc=mean, scale=std)\n"
    ]
   },
   {
@@ -654,12 +592,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-3.5099964213703005, 0.0004481127249057967)"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Your code here:\n",
+    "from statsmodels.stats.proportion import proportions_ztest\n",
+    "a=salaries[salaries['Salary or Hourly'] =='Hourly']\n",
+    "b=salaries['Salary or Hourly']\n",
+    "count = len(a)\n",
+    "nobs = len(b)\n",
+    "value = .25\n",
+    "proportions_ztest(count, nobs, value)\n",
+    "\n",
+    "# Thus reject null hypothesis given p value is lower than 0.05 thus the \n",
+    "# proportion is not 25%, given a negative statistic we can see it is in fact lower "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here:\n"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
