--- a/module-2/lab-hypothesis-testing/your-code/bonus.ipynb
+++ b/module-2/lab-hypothesis-testing/your-code/bonus.ipynb
@@ -351,11 +351,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Attack': 7.870697833082198e-05,\n",
+       " 'Defense': 1.625297102878502e-08,\n",
+       " 'HP': 0.055303215722159266,\n",
+       " 'Sp. Atk': 7.274587020175735e-05,\n",
+       " 'Sp. Def': 5.446652397767198e-05,\n",
+       " 'Speed': 0.012025705397018732,\n",
+       " 'Total': 5.874517504414334e-08}"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "t1=pokemon.copy()[pokemon[\"Type 2\"].isna()==True]\n",
+    "t2=pokemon.copy()[pokemon[\"Type 2\"].isna()==False]\n",
+    "test=t_test_features(t1,t2)\n",
+    "test\n"
    ]
   },
   {
@@ -366,12 +386,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your comment here"
+    "The null hypothesis is rejected with confidence in most cases, meaning there's significant difference for these features. For HP the null hypothesis can be rejected but with less confidence. However, it can't be rejected for Speed."
    ]
   },
   {
@@ -385,11 +403,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8.570151739679279e-06"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "ttest_rel(pokemon[\"Attack\"],pokemon['Defense']).pvalue/2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1966842998774061"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ttest_rel(pokemon[\"Sp. Atk\"],pokemon['Sp. Def']).pvalue/2"
    ]
   },
   {
@@ -400,13 +449,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The null hypothesis is rejected for attack vs. difference, meaning there is significant difference between their values. It can't be rejected for Sp. Atk vs Sp. Def, so we can't say if there's siginificant difference for these."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your comment here"
-   ]
+   "source": []
   }
  ],
  "metadata": {
